# Sharingan

./: CMakeLists.txt  LICENSE  Readme.md
Sharingan/: Readme.md
Sharingan/dependencies/glad/src/: glad.c
Sharingan/include/: Canvas.hpp  CanvasManager.hpp  IDrawable.h
Sharingan/include/Components/: ButtonComponent.hpp  ImGuiDialogComponent.h  SliderComponent.hpp
cmake/: SharinganConfig.cmake.in
dependencies/glad/include/glad/: glad.h
include/: ImGuiDialog.hpp  Sharingan.h  Window.h  Window.hpp
include/Components/: ButtonComponent.hpp  CheckboxComponent.hpp  ColorPickerComponent.hpp  ComboComponent.hpp  ImGuiDialogComponent.h  InputTextComponent.hpp  ProgressBarComponent.hpp  SliderComponent.hpp  TextComponent.hpp  WindowComponent.hpp
samples/SimpleUsage/: CMakeLists.txt
samples/SimpleUsage/src/: main.cpp
samples/dependencies/glad/: CMakeLists.txt
src/: main.cpp
